[tool.poetry]
name = "glances_api"
version = "0.3.6"
description = "Python API for interacting with Glances"
authors = ["Fabian Affolter <fabian@affolter-engineering.ch>"]
homepage = "https://github.com/home-assistant-ecosystem/python-glances-api"
repository = "https://github.com/home-assistant-ecosystem/python-glances-api/releases"
readme = "README.rst"
license = "MIT"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Topic :: Utilities",
]

[tool.poetry.dependencies]
python = "^3.8"
httpx = ">=0.23,<1"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
pytest = "^6.2.5"
pytest-httpx = ">0.15,<1"
pytest-asyncio = "^0.16.0"
isort = "^5.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
