[tool.poetry]
name = "glances_api"
version = "0.9.1"
description = "Python API for interacting with Glances"
authors = ["Fabian Affolter <fabian@affolter-engineering.ch>"]
homepage = "https://github.com/home-assistant-ecosystem/python-glances-api"
repository = "https://github.com/home-assistant-ecosystem/python-glances-api/releases"
readme = "README.md"
license = "MIT"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Topic :: Utilities",
]

[tool.poetry.dependencies]
python = "^3.13"
httpx = ">=0.28,<1"

[tool.poetry.group.dev.dependencies]
black = "^26.3"
pytest = "^9"
pytest-httpx = ">0.35,<1"
pytest-asyncio = "^1.3.0"
isort = "^5.10.0"
mypy = "^1.20.0"

[tool.mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
mypy_path = "glances_api/"
no_implicit_optional = true
show_error_codes = true
warn_unreachable = true
warn_unused_ignores = true
exclude = [
    'pyproject.toml',
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
